gitops/apps/memorial/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memorial
  labels:
    app.kubernetes.io/name: memorial
